# wintun-bindings

./: Cargo.toml  LICENSE  README.md  bindgen.ps1
.cargo/: config.toml
.github/workflows/: main.yml
examples/: basic-async.rs  basic.rs  udp-echo-async.rs  udp-echo.rs  wireshark.rs
src/: adapter.rs  async_session.rs  dns_via_reg.rs  error.rs  ffi.rs  fn_holder.rs  handle.rs  lib.rs  log.rs  packet.rs  session.rs  util.rs  verify_binary_signature.rs  wintun_raw.rs
